--- a/docs/components/reader.mdx
+++ b/docs/components/reader.mdx
@@ -115,7 +115,7 @@ To get you started, we have a few recommendations for you to try out.
         <div>
           <div style={{ marginBottom: "2rem" }}>
             <h4>RoBERTa (base)</h4>
-            <p>An optimised variant of BERT and a great starting point.</p>
+            <p>An optimized variant of BERT and a great starting point.</p>
             <pre>
               <code>from haystack.nodes import FARMReader</code>
               <code>reader = FARMReader("deepset/roberta-base-squad2")</code>
@@ -173,7 +173,7 @@ To get you started, we have a few recommendations for you to try out.
         <div>
           <div style={{ marginBottom: "2rem" }}>
             <h4>RoBERTa (base)</h4>
-            <p>An optimised variant of BERT and a great starting point.</p>
+            <p>An optimized variant of BERT and a great starting point.</p>
             <pre>
               <code>from haystack.nodes import TransformersReader</code>
               <code>
@@ -364,7 +364,7 @@ The major points are:
 If you’re interested in the finer details of these points, have a look at [this](https://github.com/deepset-ai/haystack/issues/248#issuecomment-661977237) GitHub comment.
 
 We see value in maintaining both kinds of Readers since Transformers is a very familiar library to many of Haystack’s users
-but we at deepset can more easily update and optimise the FARM pipeline for speed and performance.
+but we at deepset can more easily update and optimize the FARM pipeline for speed and performance.
 
 <!-- _comment: !! benchmarks !! -->
 
